fixed the spacing in the css for the introquiz

--- a/src/pages/Footer.css
+++ b/src/pages/Footer.css
@@ -48,7 +48,10 @@
 
 @media(min-width: 800px) {
   .footer a {
-    margin-left: 70px;
-    margin-right: 70px;
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+  .footer a:nth-child(3) {
+    margin-right: 1px;
   }
 }
