--- a/src/pages/Introquiz.css
+++ b/src/pages/Introquiz.css
@@ -1,23 +1,20 @@
 .App .quiz-title {
   text-align: center;
-  margin-top: 30px;
-  padding-bottom: 40px;
+  margin: 25px 0px 25px 0px;
+  padding-bottom: 20px;
   position: relative;
 }
 
 .App .quiz-title .quiz-name {
-  font-size: 48px;
+  font-size: 34px;
   margin-top: 5px;
   color: #59605f;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
   display: inline-block;
 }
 
 .App .sum {
-  margin: 25px 5px 25px 5px;
+  margin: 25px 0px 25px 0px;
   color: #59605f;
 }
 
@@ -31,7 +28,7 @@
   border: 1px solid #6EC8B2;
   font-size: 16px;
   background-color: #fff;
-  margin-bottom: 30px;
+  margin-bottom: 25px;
   color: #59605f;
 }
 
@@ -54,14 +51,6 @@
     margin-top: 30px;
     margin-bottom: 10px;
   }
-  .App .quiz-title .quiz-name {
-    margin-right: 20px;
-    margin-left: 20px;
-  }
-  .App .quiz-title .sum {
-    margin-right: 30px;
-    margin-left: 30px;
-  }
   .App .Quiz-pic {
     max-height: 260px;
     margin-left: 0 auto;
@@ -72,8 +61,6 @@
 
 @media (max-width:800px) {
   .quiz-title {
-    margin-right: 30px;
-    margin-left: 30px;
     max-width: 800px;
     min-width: 320px;
     text-align: center;
@@ -105,5 +92,8 @@
   .quiz-title {
     text-align: center;
     margin: 0 10px 0 10px;
+  }
+  .App .begin-quiz {
+    margin-bottom: 0px;
   }
 }
